postgres/manifests/postgresql-sts.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql-svc-headless
spec:
  clusterIP: None
  selector:
    app: postgresql-app
  ports:
  - port: 5432
    targetPort: psql
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql-svc
spec:
  type: NodePort
  selector:
    app: postgresql-app
  ports:
  - port: 5432
    targetPort: psql
    nodePort: 32543
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgresql-sts
spec:
  selector:
    matchLabels:
      app: postgresql-app
  serviceName: postgresql-svc-headless
  replicas: 1
  template:
    metadata:
      labels:
        app: postgresql-app
    spec:
      containers:
      - name: postgresql
        image: postgres:16.2
        ports:
        - containerPort: 5432
          name: psql
        volumeMounts:
        - name: db
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: db
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: standard
      resources:
        requests:
          storage: 5Gi
