postgres/manifests/pgadmin-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin-dep
spec:
  
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin-app
  template:
    metadata:
      labels:
        app: pgadmin-app
    spec:
      volumes:
        - name: pgadmin-data
          persistentVolumeClaim:
            claimName: data-pgadmin
      containers:
      - name: pgadmin4
        image: dpage/pgadmin4
        ports:
        - containerPort: 80
          name: pgadmin-port
        volumeMounts:
          - name: pgadmin-data
            mountPath: /var/lib/pgadmin
        resources:
          requests:
            memory: "265Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        securityContext:
          runAsUser: 0
          runAsGroup: 0
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-dep
spec:
  ports:
  - port: 80
    protocol: TCP
    name: pgadmin-port
  selector:
    app: pgadmin-app

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
spec:
  tls:
  - hosts:
    - pgadmin.home.local
    secretName: pgadmin-tls
  ingressClassName: nginx
  rules:
  - host: pgadmin.dev.local
    http:
      paths:
      - backend:
          service:
            name: pgadmin-dep
            port:
              number: 80
        path: /
        pathType: Prefix
